test/parsetest/valid/empty_statements.java
class Main{
	public int field1;

	public static void main(String[] args){
		int c = 4;
		while(c != 0);
			c-1;
		return;;
		;
	}
}