test/parsetest/invalid/missing_return_type.java
/*Line 3: Missing return type for function main*/
class Main{
	public main(String integer){
		int c = 4;
		while(c != 0);
			c--;
		return;
	}
}